<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <ImageView
            android:id="@+id/take_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:background="@drawable/ic_add_a_photo_black_48dp"
            android:layout_gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/name_text_view"
                    android:layout_margin="16dp"/>

                <EditText
                    android:id="@+id/editText_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/price_text_view"
                    android:layout_margin="16dp"/>

                <EditText
                    android:id="@+id/edit_text_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_margin="16dp"
                    android:inputType="number"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/quantity_text_view"
                    android:layout_margin="16dp"/>

                <Button
                    android:id="@+id/minus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_remove_black_24dp" />

                <EditText
                    android:id="@+id/edit_text_quantity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_margin="16dp"
                    android:inputType="number"/>

                <Button
                    android:id="@+id/plus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_add_black_24dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:text="@string/supplier_info" />

                <EditText
                    android:id="@+id/supplier_info"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_margin="16dp" />
            </LinearLayout>

            <Button
                android:id="@+id/order_from_supplier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_from_supplier"
                android:onClick="orderFromSupplier"
                android:layout_margin="16dp"/>

            <Button
                android:id="@+id/delete_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_entry"
                android:onClick="deleteProduct"
                android:layout_margin="16dp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>